<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImplicitIntentDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_alarm_clock">Alarm Clock</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_camera">Camera</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_email">Email</string>
    <string name="action_file_storage">File Storage</string>
    <string name="action_maps">Maps</string>
    <string name="action_music_or_video">Music or Video</string>
    <string name="action_phone">Phone</string>
    <string name="action_setting">Setting</string>
    <string name="action_text_messaging">Text Messaging</string>
    <string name="action_web_browser">Web Browser</string>

</resources>
