<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/action_alarm_clock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_alarm_clock"/>
        <Button
            android:id="@+id/action_calendar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_calendar"/>
        <Button
            android:id="@+id/action_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_camera"/>
        <Button
            android:id="@+id/action_contacts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_contacts"/>
        <Button
            android:id="@+id/action_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_email"/>
        <Button
            android:id="@+id/action_file_storage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_file_storage"/>
        <Button
            android:id="@+id/action_maps"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_maps"/>
        <Button
            android:id="@+id/action_music_or_video"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_music_or_video"/>
        <Button
            android:id="@+id/action_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_phone"/>
        <Button
            android:id="@+id/action_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_setting"/>
        <Button
            android:id="@+id/action_text_messaging"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_text_messaging"/>
        <Button
            android:id="@+id/action_web_browser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/action_web_browser"/>

    </LinearLayout>

</ScrollView>
